WIP winbond flash driver

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ license = "MIT"
 [features]
 default = [
    "defmt-default",
+   "stm32f446",
 ]
 stm32f429 = ["stm32f4/stm32f429", "stm32f4_any"]
 stm32f446 = ["stm32f4/stm32f446", "stm32f4_any"]
